--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "mapbox-gl": "^1.8.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "rails-erb-loader": "^5.5.2"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.10.3"
