--- a/config/meta.yml
+++ b/config/meta.yml
@@ -4,4 +4,4 @@
 meta_product_name: "iPiPi"
 meta_title: "Cheirinho de sucesso"
 meta_description: "Find the closest public bathroom"
-meta_image: "logo.png" # should exist in `app/assets/images/` # Has to be changed
+meta_image: "cover.png" # should exist in `app/assets/images/` # Has to be changed
